; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8192e/extr_rtllib_rx.c_rtllib_rx_frame_mgmt.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8192e/extr_rtllib_rx.c_rtllib_rx_frame_mgmt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rtllib_device = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.sk_buff = type { i32, i64 }
%struct.rtllib_rx_stats = type { i32 }
%struct.rtllib_hdr_3addr = type { i32 }

@ETH_ALEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.rtllib_device*, %struct.sk_buff*, %struct.rtllib_rx_stats*, i32, i32)* @rtllib_rx_frame_mgmt to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rtllib_rx_frame_mgmt(%struct.rtllib_device* %0, %struct.sk_buff* %1, %struct.rtllib_rx_stats* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca %struct.rtllib_device*, align 8
  %8 = alloca %struct.sk_buff*, align 8
  %9 = alloca %struct.rtllib_rx_stats*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca %struct.rtllib_hdr_3addr*, align 8
  store %struct.rtllib_device* %0, %struct.rtllib_device** %7, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %8, align 8
  store %struct.rtllib_rx_stats* %2, %struct.rtllib_rx_stats** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %13 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %14 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %13, i32 0, i32 1
  %15 = load i64, i64* %14, align 8
  %16 = inttoptr i64 %15 to %struct.rtllib_hdr_3addr*
  store %struct.rtllib_hdr_3addr* %16, %struct.rtllib_hdr_3addr** %12, align 8
  %17 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %18 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = load %struct.rtllib_rx_stats*, %struct.rtllib_rx_stats** %9, align 8
  %21 = getelementptr inbounds %struct.rtllib_rx_stats, %struct.rtllib_rx_stats* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 4
  %22 = load %struct.rtllib_device*, %struct.rtllib_device** %7, align 8
  %23 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %24 = load %struct.rtllib_rx_stats*, %struct.rtllib_rx_stats** %9, align 8
  %25 = call i32 @rtllib_rx_mgt(%struct.rtllib_device* %22, %struct.sk_buff* %23, %struct.rtllib_rx_stats* %24)
  %26 = load %struct.rtllib_hdr_3addr*, %struct.rtllib_hdr_3addr** %12, align 8
  %27 = getelementptr inbounds %struct.rtllib_hdr_3addr, %struct.rtllib_hdr_3addr* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.rtllib_device*, %struct.rtllib_device** %7, align 8
  %30 = getelementptr inbounds %struct.rtllib_device, %struct.rtllib_device* %29, i32 0, i32 0
  %31 = load %struct.TYPE_2__*, %struct.TYPE_2__** %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load i32, i32* @ETH_ALEN, align 4
  %35 = call i64 @memcmp(i32 %28, i32 %33, i32 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %40

37:                                               ; preds = %5
  %38 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %39 = call i32 @dev_kfree_skb_any(%struct.sk_buff* %38)
  store i32 0, i32* %6, align 4
  br label %49

40:                                               ; preds = %5
  %41 = load %struct.rtllib_device*, %struct.rtllib_device** %7, align 8
  %42 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %43 = load %struct.rtllib_rx_stats*, %struct.rtllib_rx_stats** %9, align 8
  %44 = load i32, i32* %10, align 4
  %45 = load i32, i32* %11, align 4
  %46 = call i32 @rtllib_rx_frame_softmac(%struct.rtllib_device* %41, %struct.sk_buff* %42, %struct.rtllib_rx_stats* %43, i32 %44, i32 %45)
  %47 = load %struct.sk_buff*, %struct.sk_buff** %8, align 8
  %48 = call i32 @dev_kfree_skb_any(%struct.sk_buff* %47)
  store i32 0, i32* %6, align 4
  br label %49

49:                                               ; preds = %40, %37
  %50 = load i32, i32* %6, align 4
  ret i32 %50
}

declare dso_local i32 @rtllib_rx_mgt(%struct.rtllib_device*, %struct.sk_buff*, %struct.rtllib_rx_stats*) #1

declare dso_local i64 @memcmp(i32, i32, i32) #1

declare dso_local i32 @dev_kfree_skb_any(%struct.sk_buff*) #1

declare dso_local i32 @rtllib_rx_frame_softmac(%struct.rtllib_device*, %struct.sk_buff*, %struct.rtllib_rx_stats*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
